refactoring, close to average added