@@ -5,15 +5,21 @@ import java.util.Random;
 import java.util.stream.Collectors;
 
 public class GeneratorService {
+    private static final int UNICODE_TABLE_OFFSET = 97;
+    private static final int LETTERS_IN_CICLE = 25;
 
-    private List<Integer> range;
+    private final List<Integer> range;
 
     public GeneratorService() {
         range = new Random()
                 .ints(0,9)
                 .limit(10)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public GeneratorService(List<Integer> range) {
+        this.range = range;
     }
 
     public String getPostCode() {
@@ -24,23 +30,15 @@ public class GeneratorService {
         var sb = new StringBuilder();
 
         for (int i = 1; i < range.size(); i += 2) {
-            int firstDigit = range.get(i - 1);
-            int secondDigit = range.get(i);
+            int decimalDigit = range.get(i - 1);
+            int singleDigit = range.get(i);
 
-            int targetDigit;
-            if (firstDigit == 0 && secondDigit == 0) {
-                targetDigit = 0;
-            } else if (firstDigit == 0 && secondDigit != 0) {
-                targetDigit = secondDigit;
-            } else {
-                targetDigit = firstDigit * 10 + secondDigit;
+            int targetDigit = decimalDigit * 10 + singleDigit;
+
+            if (targetDigit > LETTERS_IN_CICLE) {
+                targetDigit = targetDigit % 26;
             }
-
-            while (targetDigit > 25) {
-                targetDigit = targetDigit - 25 - 1;
-            }
-
-            char targetChar = (char) (targetDigit + 97);
+            char targetChar = (char) (targetDigit + UNICODE_TABLE_OFFSET);
             sb.append(targetChar);
         }
         return sb.toString();
